Closed Bug 1843163 Opened 1 year ago Closed 11 months ago

Intermittent Assertion failure: Timestamp::Millis(aFrame.render_time_ms()) > mNextFrameMinimumTime, at /builds/worker/checkouts/gecko/dom/media/systemservices/video_engine/desktop_capture_impl.cc:711

Categories

(Core :: Audio/Video, defect, P5)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox120 --- wontfix
firefox121 --- wontfix
firefox122 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bwc)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=422446453&repo=mozilla-esr115
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XuH5XokKQeaUKDbRO5ujhw/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XuH5XokKQeaUKDbRO5ujhw/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2023-07-12T20:21:59.957Z] 20:21:59     INFO - Assertion failure: Timestamp::Millis(aFrame.render_time_ms()) > mNextFrameMinimumTime, at /builds/worker/checkouts/gecko/dom/media/systemservices/video_engine/desktop_capture_impl.cc:711
[task 2023-07-12T20:21:59.979Z] 20:21:59     INFO - [WARN  webrender::renderer::init] asking to enable_gpu_markers but no supporting extension was found
[task 2023-07-12T20:22:00.026Z] 20:22:00     INFO - REFTEST TEST-PASS | dom/media/webrtc/tests/crashtests/1821477.html | (LOAD ONLY)
[task 2023-07-12T20:22:00.027Z] 20:22:00     INFO - REFTEST TEST-END | dom/media/webrtc/tests/crashtests/1821477.html
[task 2023-07-12T20:22:00.028Z] 20:22:00     INFO - [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2023-07-12T20:22:00.029Z] 20:22:00     INFO - [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2023-07-12T20:22:00.029Z] 20:22:00     INFO - [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2023-07-12T20:22:00.058Z] 20:22:00     INFO - [GPU 9752, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp:371
[task 2023-07-12T20:22:00.069Z] 20:22:00     INFO - REFTEST TEST-START | dom/media/webspeech/synth/crashtests/1230428.html
[task 2023-07-12T20:22:00.070Z] 20:22:00     INFO - REFTEST TEST-SKIP | dom/media/webspeech/synth/crashtests/1230428.html | 
[task 2023-07-12T20:22:00.070Z] 20:22:00     INFO - REFTEST TEST-END | dom/media/webspeech/synth/crashtests/1230428.html
[task 2023-07-12T20:22:00.071Z] 20:22:00     INFO - REFTEST TEST-START | dom/plugins/test/crashtests/41276-1.html
[task 2023-07-12T20:22:00.071Z] 20:22:00     INFO - REFTEST INFO | RESTORE PREFERENCE pref(media.getusermedia.insecure.enabled,false)
[task 2023-07-12T20:22:00.072Z] 20:22:00     INFO - REFTEST INFO | RESTORE PREFERENCE pref(media.devices.insecure.enabled,false)
[task 2023-07-12T20:22:00.072Z] 20:22:00     INFO - REFTEST INFO | RESTORE PREFERENCE pref(media.navigator.permission.disabled,false)
[task 2023-07-12T20:22:00.073Z] 20:22:00     INFO - REFTEST TEST-LOAD | http://localhost:59853/1689193105981/33/41276-1.html | 818 / 3983 (20%)
[task 2023-07-12T20:22:00.077Z] 20:22:00     INFO - [Parent 9268, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3106
[task 2023-07-12T20:22:00.085Z] 20:22:00     INFO - [Child 6172, Main Thread] WARNING: NS_ENSURE_TRUE(mProfileDir) failed: file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:1162
[task 2023-07-12T20:22:00.085Z] 20:22:00     INFO - [Child 6172, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:467
[task 2023-07-12T20:22:00.087Z] 20:22:00     INFO - [Child 6172, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012 (NS_ERROR_FILE_NOT_FOUND): file /builds/worker/checkouts/gecko/layout/style/Loader.cpp:2085
[task 2023-07-12T20:22:00.277Z] 20:22:00     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-07-12T20:22:21.426Z] 20:22:21     INFO - #01: webrtc::DesktopCaptureImpl::NotifyOnFrame(webrtc::VideoFrame const&) [dom/media/systemservices/video_engine/desktop_capture_impl.cc:710]
[task 2023-07-12T20:22:21.430Z] 20:22:21     INFO - #02: webrtc::DesktopCaptureImpl::OnCaptureResult(webrtc::DesktopCapturer::Result, std::unique_ptr<webrtc::DesktopFrame,std::default_delete<webrtc::DesktopFrame> >) [dom/media/systemservices/video_engine/desktop_capture_impl.cc:693]
[task 2023-07-12T20:22:21.431Z] 20:22:21     INFO - #03: webrtc::DesktopAndCursorComposer::OnCaptureResult(webrtc::DesktopCapturer::Result, std::unique_ptr<webrtc::DesktopFrame,std::default_delete<webrtc::DesktopFrame> >) [third_party/libwebrtc/modules/desktop_capture/desktop_and_cursor_composer.cc:248]
[task 2023-07-12T20:22:21.432Z] 20:22:21     INFO - #04: webrtc::FallbackDesktopCapturerWrapper::OnCaptureResult(webrtc::DesktopCapturer::Result, std::unique_ptr<webrtc::DesktopFrame,std::default_delete<webrtc::DesktopFrame> >) [third_party/libwebrtc/modules/desktop_capture/fallback_desktop_capturer_wrapper.cc:173]
[task 2023-07-12T20:22:21.433Z] 20:22:21     INFO - #05: webrtc::BlankDetectorDesktopCapturerWrapper::OnCaptureResult(webrtc::DesktopCapturer::Result, std::unique_ptr<webrtc::DesktopFrame,std::default_delete<webrtc::DesktopFrame> >) [third_party/libwebrtc/modules/desktop_capture/blank_detector_desktop_capturer_wrapper.cc:113]
[task 2023-07-12T20:22:21.433Z] 20:22:21     INFO - #06: webrtc::ScreenCapturerWinDirectx::CaptureFrame() [third_party/libwebrtc/modules/desktop_capture/win/screen_capturer_win_directx.cc:198]
[task 2023-07-12T20:22:21.434Z] 20:22:21     INFO - #07: webrtc::DesktopCaptureImpl::CaptureFrameOnThread() [dom/media/systemservices/video_engine/desktop_capture_impl.cc:757]
[task 2023-07-12T20:22:21.434Z] 20:22:21     INFO - #08: nsTimerImpl::Fire(int) [xpcom/threads/nsTimerImpl.cpp:682]
[task 2023-07-12T20:22:21.435Z] 20:22:21     INFO - #09: nsTimerEvent::Run() [xpcom/threads/TimerThread.cpp:483]
[task 2023-07-12T20:22:21.435Z] 20:22:21     INFO - #10: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1246]
[task 2023-07-12T20:22:21.435Z] 20:22:21     INFO - #11: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:479]
[task 2023-07-12T20:22:21.436Z] 20:22:21     INFO - #12: mozilla::ipc::MessagePumpForNonMainUIThreads::DoRunLoop() [ipc/glue/MessagePump_windows.cpp:38]
[task 2023-07-12T20:22:21.437Z] 20:22:21     INFO - #13: base::MessagePumpWin::Run(base::MessagePump::Delegate*) [ipc/chromium/src/base/message_pump_win.h:79]
[task 2023-07-12T20:22:21.437Z] 20:22:21     INFO - #14: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:362]
[task 2023-07-12T20:22:21.437Z] 20:22:21     INFO - #15: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:344]
[task 2023-07-12T20:22:21.438Z] 20:22:21     INFO - #16: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:393]
[task 2023-07-12T20:22:21.597Z] 20:22:21     INFO - #17: _PR_NativeRunThread(void*) [nsprpub/pr/src/threads/combined/pruthr.c:408]
[task 2023-07-12T20:22:21.609Z] 20:22:21     INFO - #18: pr_root(void*) [nsprpub/pr/src/md/windows/w95thred.c:140]
[task 2023-07-12T20:22:21.619Z] 20:22:21     INFO -  fix-stacks: error: failed to read debug info file `ucrtbase.pdb` for `C:\Windows\System32\ucrtbase.dll`
[task 2023-07-12T20:22:21.619Z] 20:22:21     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-07-12T20:22:21.620Z] 20:22:21     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-07-12T20:22:21.620Z] 20:22:21     INFO - #19: recalloc [C:\Windows\System32\ucrtbase.dll + 0x29363]
[task 2023-07-12T20:22:21.623Z] 20:22:21     INFO -  fix-stacks: error: failed to read debug info file `wkernel32.pdb` for `C:\Windows\System32\KERNEL32.DLL`
[task 2023-07-12T20:22:21.623Z] 20:22:21     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-07-12T20:22:21.623Z] 20:22:21     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-07-12T20:22:21.624Z] 20:22:21     INFO - #20: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x1269d]
[task 2023-07-12T20:22:21.707Z] 20:22:21     INFO - #21: patched_BaseThreadInitThunk(int, void*, void*) [toolkit/xre/dllservices/mozglue/WindowsDllBlocklist.cpp:617]
[task 2023-07-12T20:22:21.718Z] 20:22:21     INFO -  fix-stacks: error: failed to read debug info file `wntdll.pdb` for `C:\Windows\SYSTEM32\ntdll.dll`
[task 2023-07-12T20:22:21.719Z] 20:22:21     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-07-12T20:22:21.719Z] 20:22:21     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-07-12T20:22:21.719Z] 20:22:21     INFO - #22: RtlUserThreadStart [C:\Windows\SYSTEM32\ntdll.dll + 0x5a9f8]
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Assignee: nobody → docfaraday

Try looks normal.

Blocks: 1865722
Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ccde865781ca Make this assertion consistent with the code immediately following. r=pehrsons
Status: REOPENED → RESOLVED
Closed: 1 year ago11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: