Bug 1843163: Make this assertion consistent with the code immediately following. r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D194884